# opencode-a2a-serve

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  issue_13.md  issue_13_comment.md  issue_14.md  issue_14_comment.md  issue_38.md  issue_38_comment.md  issue_39.md  issue_39_comment.md  issue_48.md  issue_48_comment.md  issue_49.md  issue_49_comment.md  pyproject.toml
docs/: agent_deploy_sop.md  architecture.md  compatibility.md  conformance-triage.md  conformance.md  deployment.md  extension-specifications.md  guide.md  init_system.md  maintainer-architecture.md  release_deploy_smoke_test.md
scripts/: README.md  about_deploy.md  about_init_system.md  about_uninstall.md  check_coverage.py  conformance.sh  dependency_health.sh  deploy.sh  deploy_light.sh  deploy_light_readme.md  deploy_readme.md  deploy_release.sh  deploy_release_readme.md  doctor.sh  health_common.sh  init_release_system.sh  init_release_system_readme.md  init_system.sh  init_system_readme.md  shell_helpers.sh  smoke_test_built_cli.sh  start_services.sh  start_services_readme.md  uninstall.sh
tests/: conftest.py  helpers.py  mocks.py  opencode_session_extension_support.py  streaming_output_contract_support.py  test_agent_card.py  test_agent_errors.py  test_agent_helpers.py  test_app_auth.py  test_app_behaviors.py  test_auth_interceptor.py  test_call_context_builder.py  test_cli.py  test_deploy_security_contract.py  test_directory_validation.py  test_extension_contract_consistency.py  test_init_system_security.py  test_jsonrpc_ext_helpers.py  test_jsonrpc_models.py  test_jsonrpc_unsupported_method.py  test_metadata_access.py  test_metrics.py  test_multipart_input.py  test_opencode_agent_session_binding.py  test_opencode_client_params.py  test_opencode_session_extension.py  test_opencode_session_extension_commands.py  test_opencode_session_extension_interrupts.py  test_opencode_session_extension_prompt_async.py  test_opencode_session_extension_queries.py  test_opencode_upstream.py  test_opencode_upstream_client_params.py  test_runtime_profile.py  test_script_health_contract.py  test_settings.py  (+10 more)
(+176 files in other folders)
